--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Expanding Cards</title>
   </head>
   <body>
+    <!-- Container to hold all panels -->
     <div class="container">
       <div
         class="panel active"
